--- a/package.json
+++ b/package.json
@@ -1,6 +1,13 @@
 {
   "name": "webfront-practice-1",
   "private": true,
+  "repository": "https://github.com/linnefromice/webfront-practice-1",
+  "version": "0.0.1",
+  "author": {
+    "name": "linnefromice",
+    "email" : "linnefromice@gmail.com",
+    "url" : "https://linnefromice-portfolio.web.app/"
+  },
   "scripts": {
     "dev": "next dev",
     "build": "next build",
