--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "version": "0.0.1",
   "author": {
     "name": "linnefromice",
-    "email" : "linnefromice@gmail.com",
-    "url" : "https://linnefromice-portfolio.web.app/"
+    "email": "linnefromice@gmail.com",
+    "url": "https://linnefromice-portfolio.web.app/"
   },
   "scripts": {
     "dev": "next dev",
@@ -17,11 +17,13 @@
   "dependencies": {
     "next": "12.0.9",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "styled-components": "^5.3.3"
   },
   "devDependencies": {
     "@types/node": "17.0.13",
     "@types/react": "17.0.38",
+    "@types/styled-components": "^5.1.21",
     "eslint": "8.8.0",
     "eslint-config-next": "12.0.9",
     "typescript": "4.5.5"
