--- a/package.json
+++ b/package.json
@@ -12,20 +12,30 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "storybook": "start-storybook  -s ./public,./src,.storybook -p 6006",
+    "build-storybook": "build-storybook"
   },
   "dependencies": {
+    "@storybook/addon-viewport": "^6.4.17",
     "next": "12.0.9",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "styled-components": "^5.3.3"
   },
   "devDependencies": {
+    "@babel/core": "^7.16.12",
+    "@storybook/addon-actions": "^6.4.17",
+    "@storybook/addon-essentials": "^6.4.17",
+    "@storybook/addon-links": "^6.4.17",
+    "@storybook/react": "^6.4.17",
     "@types/node": "17.0.13",
     "@types/react": "17.0.38",
     "@types/styled-components": "^5.1.21",
+    "babel-loader": "^8.2.3",
     "eslint": "8.8.0",
     "eslint-config-next": "12.0.9",
+    "eslint-plugin-storybook": "^0.5.6",
     "typescript": "4.5.5"
   }
 }
