--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@storybook/addon-essentials": "^6.4.17",
     "@storybook/addon-links": "^6.4.17",
     "@storybook/react": "^6.4.17",
+    "@svgr/webpack": "^6.2.1",
     "@types/node": "17.0.13",
     "@types/react": "17.0.38",
     "@types/styled-components": "^5.1.21",
