--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
+    "test": "jest",
     "storybook": "start-storybook  -s ./public,./src,.storybook -p 6006",
     "build-storybook": "build-storybook"
   },
@@ -30,6 +31,8 @@
     "@storybook/addon-links": "^6.4.17",
     "@storybook/react": "^6.4.17",
     "@svgr/webpack": "^6.2.1",
+    "@testing-library/jest-dom": "^5.16.1",
+    "@testing-library/react": "^12.1.2",
     "@types/node": "17.0.13",
     "@types/react": "17.0.38",
     "@types/styled-components": "^5.1.21",
@@ -37,6 +40,7 @@
     "eslint": "8.8.0",
     "eslint-config-next": "12.0.9",
     "eslint-plugin-storybook": "^0.5.6",
+    "jest": "^27.4.7",
     "typescript": "4.5.5"
   }
 }
