--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@storybook/addon-essentials": "^6.4.17",
     "@storybook/addon-links": "^6.4.17",
     "@storybook/react": "^6.4.17",
+    "@storybook/testing-react": "^1.2.3",
     "@svgr/webpack": "^5.0.0",
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
